fix overflow text

--- a/app/assets/stylesheets/module/_retrospectives.sass
+++ b/app/assets/stylesheets/module/_retrospectives.sass
@@ -53,9 +53,10 @@
     margin: 8px
 
   &__label-description
-    font-size: $font-size-xx-small
+    font-size: 0.8rem
     font-weight: bold
-    word-break: break-all
+    height: 110px
+    overflow: hidden
 
   &__label-header
     color: #6b6b6b
@@ -73,6 +74,10 @@
   &__label-user-name
     margin-top: 2px
     margin-left: 5px
+    width: 70px
+    white-space: nowrap
+    overflow: hidden
+    text-overflow: ellipsis
 
   &__user
     color: #f39c12
